fix share animate on mobile version; update ptofile css

--- a/api/app/assets/stylesheets/site/user.scss
+++ b/api/app/assets/stylesheets/site/user.scss
@@ -330,10 +330,11 @@ body.profile {
                 position: relative;
             }
             .box-avatar-user {
-                .avatar,
+                div.avatar,
                 .avatar_hover {
                     width: 106px;
                     height: 106px;
+                    margin: 0 auto;
                 }
                 img.badge {
                     position: absolute;
